maze.lessons.maze.island.IslandMaze.scala.error
Escaper:20: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime21.Escaper
  if (estFaceMur() && getDirection() == direction.NORTH)
                                        ^